# ros2-cubic-trajectory-generator

./: README.md
src/ar_interface/: CMakeLists.txt  package.xml
src/ar_interface/msg/: CubicTrajCoeffs.msg  CubicTrajParams.msg
src/ar_interface/srv/: ComputeCubicTraj.srv
src/ar_test/: README.txt  package.xml  setup.cfg  setup.py
src/ar_test/ar_test/: compute_cubic_coeffs.py  cubic_traj_planner.py  plot_cubic_traj.py  points_generator.py
src/ar_test/launch/: cubic_traj_gen.launch.py
